third_party/move/move-compiler-v2/tests/reference-safety/v1-tests/call_ordering.exp

Diagnostics:
error: cannot freeze value which is still mutably borrowed
  ┌─ tests/reference-safety/v1-tests/call_ordering.move:7:13
  │
6 │         let f = &mut s.f;
  │                 -------- field `f` previously mutably borrowed here
7 │         foo(freeze(s), { *f = 0; 1 })
  │             ^^^^^^^^^    ------ conflicting reference `f` used here
  │             │
  │             frozen here

error: cannot write value since it is borrowed
   ┌─ tests/reference-safety/v1-tests/call_ordering.move:12:25
   │
12 │         bar(&mut s.f, { s.f = 0; 1 })
   │         ----------------^^^^^^^------
   │         │   │           │
   │         │   │           write attempted here
   │         │   previously mutably borrowed here
   │         conflicting reference used here
